# android-openxr-exp

./: .gitignore  README.md
bob-shaders/: Cargo.toml
bob-shaders/src/: flat_color_shader.rs  geometry.rs  lib.rs  masked_solid_shader.rs  raw_texture_shader.rs  sun_phong_shader.rs
example1/: Cargo.toml  build.rs
example1/src/: drawcore.rs  errors.rs  flat_color_shader.rs  gl_fancy.rs  gl_helper.rs  kludges.rs  lib.rs  linear.rs  openxr_helpers.rs  rainbow_triangle.rs  raw_texture_shader.rs  scene.rs  sun_phong_shader.rs  suzanne.rs  text_painting.rs  textured_quad.rs
gl-thin/: Cargo.toml
gl-thin/src/: errors.rs  gl_fancy.rs  gl_helper.rs  lib.rs  linear.rs  openxr_helpers.rs
