[package]
name = "gl-thin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="*"
gl="*"
egli="*"
itertools = "*"

[dependencies.openxr]
features=["linked"]
#version=">=0.18"
# until the OpenGlEs Graphics backend is published, we must use git
git="https://github.com/Ralith/openxrs.git"
rev="48b5875"
[dependencies.openxr-sys]
#version=">=0.18"
# until the OpenGlEs Graphics backend is published, we must use git
git="https://github.com/Ralith/openxrs.git"
rev="48b5875"
